FIxed some display issues on mobile

--- a/front/src/style/themes/_light.scss
+++ b/front/src/style/themes/_light.scss
@@ -36,10 +36,11 @@
     box-shadow: inset 0px -1px 0px 0px rgba(34, 36, 38, 0.15);
   }
   .ui.fixed-footer.segment {
-    background-color: white;
     box-shadow: inset 0px 1px 0px 0px rgba(34, 36, 38, 0.15);
   }
   .queue.segment .queue-controls {
-    background-color: white;
+    @include media("<desktop") {
+      background-color: white;
+    }
   }
 }
